# clerk

./: .buildinfo  CHANGELOG.rst  GEMINI.md  LICENSE  README.rst  about.html  changelog.html  connect.html  genindex.html  glossary.html  index.html  intro.html  logs.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todos.html
.doctrees/: about.doctree  changelog.doctree  connect.doctree  glossary.doctree  index.doctree  intro.doctree  logs.doctree  todos.doctree
_modules/: clerk.html  gather.html  index.html
_sources/: index.rst.txt  intro.rst.txt
about/: index.html
changelog/: index.html
codearc-benchmarking-reasoning-capabilities-of-llm-agents-for-inductive-program-synthesis/: index.rst
codestral/: test1.py  test2.py
connect/: index.html
demos/: demo.html  index.html
docs/: .buildinfo  about.html  changelog.html  genindex.html  glossary.html  intro.html  objects.inv  py-modindex.html  searchindex.js
docsrc/: conf.py  index.rst
genindex/: index.html
glossary/: index.html
google-gemini-cli-cheatsheet/: original.html  original.rst
google-gemini-gemini-cli/: README.md  index.rst
intro/: index.html
log/: atom.xml  index.html
logs/: index.html
mission/: index.html
modules/: index.html
py-modindex/: index.html
refs/: index.html
scripts/: install_youtube-dl.sh
search/: index.html
todos/: add_ruff_settings.html  expand_engelbart.html  global_testing_upgrade.html  human_conduit.html  improve_quality_control.html  index.html  mcp_interfaces.html  uv_integration.html
usage/: build.html  curate.html  (+9 more)
(+494 files in other folders)
